starting to work on the module

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,6 +14,11 @@ dynlib: $(SOURCES)
 
 tests : $(TESTS)
 
+module : 
+	pushd module; \
+	make; \
+	./install.sh;
+
 clock_tests : 
 	pushd lib/tests; \
 	make; \
