--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ SHELL = /bin/bash
 CFLAGS = -g -std=c99 -fPIC
 SOURCES = ./lib/perf_counter.o ./lib/determ_clock.o
 TESTS = clock_tests
-LIBS = -lrt
+LIBS = -lrt -lksnap
 
 all : dynlib module
 
