Changed the task clock to use raw counters and not simply count the number of overflows.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 
 .PHONY : module
 SHELL = /bin/bash
-CFLAGS = -g -std=c99 -fPIC
+CFLAGS = -g -std=c99 -fPIC -L/usr/lib
 SOURCES = ./lib/perf_counter.o ./lib/determ_clock.o
 TESTS = clock_tests
 LIBS = -lrt -lksnap
