Allows us to move between static and dynamic overflow periods.

--- a/src/module/Makefile
+++ b/src/module/Makefile
@@ -1,10 +1,17 @@
 obj-m = task_clock.o
 task_clock-y = clock_main.o
 
+#turn off instruction counting
 #-DNO_INSTRUCTION_COUNTING
+
+#use to print a bunch of stuff to the log file. Use with caution though, since
+#it can really slow things down
 #-DDEBUG_TASK_CLOCK_FINE_GRAINED -DDEBUG_TASK_CLOCK_COARSE_GRAINED
 
-KBUILD_CFLAGS += -g -O3 #-DNO_INSTRUCTION_COUNTING
+#adjust the period for the instruction counting at runtime
+#-DUSE_ADAPTIVE_OVERFLOW_PERIOD
+
+KBUILD_CFLAGS += -g -O3 #-DUSE_ADAPTIVE_OVERFLOW_PERIOD
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
