--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 
 .PHONY : module
 SHELL = /bin/bash
-CFLAGS = -g -std=gnu99 -fPIC -L/usr/lib -m32 -DDEBUG_CLOCK_CACHE_OFF #-DNO_INSTRUCTION_COUNTING
+CFLAGS = -g -std=gnu99 -fPIC -L/usr/lib -m32 -DDEBUG_CLOCK_CACHE_OFF -DDETERM_CLOCK_SAMPLE_PERIOD=5000 #-DNO_INSTRUCTION_COUNTING
 SOURCES = ./lib/perf_counter.o ./lib/determ_clock.o ./lib/debug_clock_cache.o
 TESTS = clock_tests
 LIBS = -lrt -lksnap
