First go at the bounded chunk length for supporting ad-hoc sync.

--- a/src/module/Makefile
+++ b/src/module/Makefile
@@ -1,5 +1,5 @@
 obj-m = task_clock.o
-task_clock-y = clock_main.o
+task_clock-y = clock_main.o bounded_tso.o
 
 #turn off instruction counting
 #-DNO_INSTRUCTION_COUNTING
@@ -11,7 +11,10 @@ task_clock-y = clock_main.o
 #adjust the period for the instruction counting at runtime
 #-DUSE_ADAPTIVE_OVERFLOW_PERIOD
 
-KBUILD_CFLAGS += -g -O3 -DUSE_ADAPTIVE_OVERFLOW_PERIOD
+#turns on bounded fence, which can be used to execute programs with ad-hoc sync
+#-DUSE_BOUNDED_FENCE
+
+KBUILD_CFLAGS += -g -O3 -DUSE_ADAPTIVE_OVERFLOW_PERIOD -DUSE_BOUNDED_FENCE
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
