Fixed a few bugs in the bounded TSO.

--- a/src/module/Makefile
+++ b/src/module/Makefile
@@ -14,7 +14,7 @@ task_clock-y = clock_main.o bounded_tso.o
 #turns on bounded fence, which can be used to execute programs with ad-hoc sync
 #-DUSE_BOUNDED_FENCE
 
-KBUILD_CFLAGS += -g -O3 -DUSE_ADAPTIVE_OVERFLOW_PERIOD -DUSE_BOUNDED_FENCE
+KBUILD_CFLAGS += -g -O3 -DUSE_ADAPTIVE_OVERFLOW_PERIOD #-DUSE_BOUNDED_FENCE
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
